@@ -1,3 +1,7 @@
+MailZu-ng 0.12.mailzu-ng-php72-37e0277+1 (12.12.2022)
+---------
+  - Merged administrators.
+
 MailZu-ng 0.11.mailzu-ng-php72-194398f+1 (11.11.2021)
 ----------
  - changes are in commit message
